# equarior_backend

./: .env  Cargo.toml  INSTALL.md  README.md  Rocket.toml  docker-compose.yaml  run.sh
migrations/2022-05-06-124323_create_user/: down.sql  up.sql
migrations/2022-05-24-065908_create_game/: down.sql  up.sql
src/: jwt.rs  lib.rs  main.rs  schema.rs
src/models/: game.rs  mod.rs  round.rs  user.rs
src/routes/: auth.rs  game.rs  mod.rs  round.rs  user.rs
