[package]
name = "equarior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
jwt = "0.16.0"
rust-crypto = "0.2"
hmac = "0.12.1"
sha2 = "0.10.2"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
